--- a/blocks/indicators/indicators.css
+++ b/blocks/indicators/indicators.css
@@ -31,3 +31,17 @@
   height: 14px;
   cursor: pointer;
 }
+
+@keyframes pulse_animation {
+  0% { transform: scale(1); }
+  40% { transform: scale(1); }
+  70% { transform: scale(1.2); }
+  100% { transform: scale(1); }
+}
+
+.indicators__love_pulse {
+  animation-name: pulse_animation;
+  animation-duration: 700ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease;
+}
