#7 better position for mini indicator in header

--- a/blocks/indicators/indicators.css
+++ b/blocks/indicators/indicators.css
@@ -13,8 +13,9 @@
 }
 
 .indicators__status_mini {
-  float: left;
-  margin-top: 11px;
+  position: relative;
+  display: inline-block;
+  top: -17px;
   padding: 2px;
   cursor: pointer;
 
