--- a/blocks/options/options.css
+++ b/blocks/options/options.css
@@ -1,9 +1,9 @@
 .options {
   position: relative;
-  background: #fff;
+  /*background: #fff;*/
   border-radius: 2px;
-  box-shadow: 0 1px 0 0 #d7d8db, 0 0 0 1px #e3e4e8;
-  margin: 15px 30px 0;
+  /*box-shadow: 0 1px 0 0 #d7d8db, 0 0 0 1px #e3e4e8;*/
+  margin: 15px 0;
   font-family: body-apple-system,BlinkMacSystemFont,Roboto,Open Sans,Helvetica Neue,sans-serif;
   width: 550px;
   font-size: 17px;
@@ -21,7 +21,7 @@
   text-align: center;
 }
 .options__panel {
-  margin: 15px 20px;
+  margin: 15px 0;
   padding-bottom: 10px;
 }
 .options__row {
@@ -125,4 +125,8 @@
 }
 .btn:hover {
   background-color: #6888ad;
+}
+
+.btn:active {
+  background-color: #476688;
 }
