Great code cleanup

--- a/blocks/auth/auth.css
+++ b/blocks/auth/auth.css
@@ -1,18 +1,21 @@
 body {
   background-color: #EDEEF0;
-  font-family: -apple-system,BlinkMacSystemFont,Roboto,Open Sans,Helvetica Neue,sans-serif;
+  font-family: -apple-system, "Helvetica Neue", BlinkMacSystemFont, Roboto, Open Sans, Helvetica Neue, sans-serif;
   font-size: 16px;
 }
+
 .auth {
   width: 500px;
   background-color: #fff;
   box-shadow: 0 1px 0 0 #d7d8db, 0 0 0 1px #e3e4e8;
   border-radius: 2px;
-  margin: 20px auto;
+  margin: 100px auto;
   padding: 15px 20px 20px;
 }
+
 .auth__message {
   color: #2a5885;
+  font-weight: 200;
   text-align: center;
   border-top: 1px solid #e7e8ec;
   font-size: 1.4rem;
@@ -24,7 +27,8 @@ body {
   justify-content: center;
   margin-bottom: 15px;
 }
-.user__img img{
+
+.user__img img {
   border-radius: 50%;
   margin-right: 10px;
 }
@@ -32,6 +36,7 @@ body {
 .user__name {
   font-size: 1.75rem;
 }
+
 .loader {
   position: relative;
   width: 47px;
@@ -46,6 +51,7 @@ body {
   transform: translateZ(0);
   animation: load8 1.1s infinite linear;
 }
+
 .loader,
 .loader:after {
   border-radius: 50%;
