--- a/blocks/options/__styles/checkbox.css
+++ b/blocks/options/__styles/checkbox.css
@@ -1,15 +1,16 @@
-@import "vars";
+
 .control-group {
   display: inline-block;
   vertical-align: top;
   background: #fff;
   text-align: left;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   padding: 30px;
   width: 200px;
   height: 210px;
   margin: 10px;
 }
+
 .control {
   display: block;
   position: relative;
@@ -17,44 +18,52 @@
   margin-bottom: 15px;
   cursor: pointer;
 }
+
 .control input {
   position: absolute;
   z-index: -1;
   opacity: 0;
 }
+
 .control__indicator {
   position: absolute;
-  top: 2px;
   left: 0;
   height: 20px;
   width: 20px;
-  background: #e6e6e6;
+  background: var(--color-gray);
   border-radius: 2px;
 }
+
 .control input:focus ~ .control__indicator,
 .control:hover input ~ .control__indicator {
   background: #ccc;
 }
+
 .control input:checked ~ .control__indicator {
-  background: $blueVk;
+  background: var(--color-blue-vk);
 }
+
 .control input:checked:focus ~ .control__indicator,
 .control:hover input:not([disabled]):checked ~ .control__indicator {
   background: #476688;
 }
+
 .control input:disabled ~ .control__indicator {
-  background: #e6e6e6;
+  background: var(--color-gray);
   opacity: 0.6;
   pointer-events: none;
 }
+
 .control__indicator:after {
   content: '';
   position: absolute;
   display: none;
 }
+
 .control input:checked ~ .control__indicator:after {
   display: block;
 }
+
 .control--checkbox .control__indicator:after {
   left: 8px;
   top: 4px;
@@ -64,6 +73,7 @@
   border-width: 0 2px 2px 0;
   transform: rotate(45deg);
 }
+
 .control--checkbox input:disabled ~ .control__indicator:after {
   border-color: #7b7b7b;
 }
